Wed Jan 12  9:43:34 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO doc/api_status.txt include/tds.h src/ctlib/cs.c:
	* src/dblib/dblib.c src/tds/login.c src/tds/mem.c:
	* src/tds/token.c:
	- changed tds_alloc_compute_results declaration
	- implemented some dbmny* function in dblib
	- added some additional test in dblib

Mon Jan 10 10:37:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/rpc.c: improved

Mon Jan 10  9:50:52 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c src/dblib/dblib.c:
	- constify
	- check input
	* src/dblib/rpc.c: fix column_cur_size value

Sun Jan  9 20:40:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/config.c src/tds/des.c src/tds/iconv.c:
	* src/tds/util.c:
	- paranoid constify

Sun Jan  9 18:24:26 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/insert_speed.c: fixed

Sun Jan  9 14:51:43 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/t0018.c: improved from #1088672

Sun Jan  9 14:24:44 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c src/tds/convert.c:
	- fix output parameter on mssql

Fri Jan  7 11:56:52 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/dblib/unittests/t0002.c
	- SYBVARBINARY  and patch #1083180

Fri Dec  7 13:49:56 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/sql2tds.c: update logging

Thu Jan  6 23:44:59 EST 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/rpc.c correct rpc unittest

Thu Jan  6 15:13:56 EST 2005	JK Lowden <jklowden@schemamania.org>
	* doc/tds.html src/dblib/unittests/README updated docs

Wed Jan  5 22:07:07 EST 2005	JK Lowden <jklowden@schemamania.org>
	* include/dblib.h src/dblib/dblib.c src/dblib/rpc.c
	- Patch 1095806 by Bill Thompson
	- PRINT packets handled correctly (do not yield stale metadata).

Fri Dec 31 14:15:28 EST 2004	JK Lowden <jklowden@schemamania.org>